# quantization

./: .gitignore  FINAL_PLAN.md  GPU_QUICKSTART.md  OLD.md  PLAN.md  UPDATED_PLAN.md  main.py  pyproject.toml  vidore_full_eval.py
reports/: .tool-versions  comparison_report_4B_all_languages.md  comparison_report_4B_english.md  comparison_report_8B_all_languages.md  comparison_report_8B_english.md  generate_report.py
reports/results_4B_w4a16_autoawq_quantized/: Vidore2BioMedicalLecturesRetrieval.json  Vidore2ESGReportsHLRetrieval.json  Vidore2ESGReportsRetrieval.json  Vidore2EconomicsReportsRetrieval.json  Vidore3ComputerScienceRetrieval.json  Vidore3EnergyRetrieval.json  Vidore3FinanceEnRetrieval.json  Vidore3FinanceFrRetrieval.json  Vidore3HrRetrieval.json  Vidore3IndustrialRetrieval.json  Vidore3PharmaceuticalsRetrieval.json  Vidore3PhysicsRetrieval.json  VidoreArxivQARetrieval.json  VidoreDocVQARetrieval.json  VidoreInfoVQARetrieval.json  VidoreShiftProjectRetrieval.json  VidoreSyntheticDocQAAIRetrieval.json  VidoreSyntheticDocQAEnergyRetrieval.json  VidoreSyntheticDocQAGovernmentReportsRetrieval.json  VidoreSyntheticDocQAHealthcareIndustryRetrieval.json  VidoreTabfquadRetrieval.json  VidoreTatdqaRetrieval.json  model_meta.json
reports/results_8B_w4a16_autoawq_quantized/: Vidore2BioMedicalLecturesRetrieval.json  Vidore2ESGReportsHLRetrieval.json  Vidore2ESGReportsRetrieval.json  Vidore2EconomicsReportsRetrieval.json  Vidore3ComputerScienceRetrieval.json  Vidore3EnergyRetrieval.json  (+17 more)
scripts/: post_quantization.sh  quantize_model.py  test_quantized_model.py
(+8 files in other folders)
