[project]
name = "conversion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "auto-round>=0.9.2",
    "datasets>=4.4.1",
    "huggingface-hub==0.36.0",
    "pillow>=12.0.0",
    "safetensors>=0.7.0",
    "torch==2.8",
    "torchvision>=0.23",
    "transformers>=4.57.3",
]
